--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,71 @@
 /* Move your styles here when you're ready to clean up your HTML file */
 /* Don't forget to link to this file in your HTML, otherwise your styles won't show up! */
+
+  /* Put your styles here to get started */
+
+  /*
+    After you've finished the "Tag Selectors" exercises, move your styles
+    into the 'styles.css' file and replace this <style> tag and its contents
+    with a <link> tag that refers to 'styles.css'
+  */
+
+  html {
+    font-size: 10px;
+  }
+
+  h1 {
+    font-family: sans-serif;
+  }
+
+  h2 {
+    font-family: serif;
+  }
+  header {
+    border: 1px solid #000;
+  }
+
+  .class-list {
+    list-style-type: square;
+  }
+
+  .item {
+    border: 5px solid #000;
+  }
+
+  .even {
+    background-color: grey
+  }
+
+  .odd {
+    background-color: black;
+    color: white;
+  }
+
+  #item1 {
+    font-size: 30px
+  }
+
+  #item2 {
+    text-align: right;
+  }
+
+  #advanced-selectors ol p {
+    background-color: grey;
+    padding: 5px 10px 5px 10px;
+  }
+
+  #advanced-selectors ol li:nth-child(odd) p {
+    background-color: green
+  }
+
+  a[title="Bitmaker"]:hover {
+    text-decoration: none;
+  }
+
+  #advanced-selectors ul a:hover {
+    background-color: yellow
+  }
+
+  #advanced-selectors ul a:active {
+    background-color: red
+  }
